# DiscoveryConsole

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  install.sh  pyproject.toml
.claude/skills/coral-debug/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
blog/: index.html
codex-skill/: README.md
codex-skill-cn/coral-research-workbench/: SKILL.md
codex-skill/coral-research-workbench/: SKILL.md
coral/: __init__.py  _version.py  config.py  types.py
coral/agent/: assignments.py  manager.py  runtime.py  state.py  warmstart.py
coral/agent/builtin/: claude_code.py  (+5 more)
coral/cli/: __init__.py  _helpers.py  author.py  eval.py  kb.py  query.py  run.py  start.py  ui.py  validation.py
coral/compute/: __init__.py  runner.py  types.py
coral/gateway/: middleware.py  server.py
coral/grader/: daemon.py  loader.py  subprocess_grader.py  task_grader.py
coral/hooks/: post_commit.py
coral/hub/: attempts.py  checkpoint.py  heartbeat.py  kb.py  knowledge.py  notes.py  plan.py  readiness.py  review.py  skills.py
coral/template/: coral.md.template  coral_md.py  coral_single.md.template
coral/web/: __init__.py  api.py  app.py  events.py  logs.py
coral/workspace/: __init__.py  breadcrumbs.py  grader_env.py  project.py  repo.py  worktree.py
docs/: package-lock.json
docs/app/: layout.tsx
docs/lib/: layout.shared.tsx
examples/: README.md
examples/ADRS/cloudcast/grader/: pyproject.toml
examples/ADRS/cloudcast/grader/src/cloudcast_grader/: __init__.py  grader.py
examples/ADRS/eplb/grader/: pyproject.toml
examples/ADRS/eplb/grader/src/eplb_grader/: __init__.py  grader.py
examples/ADRS/llm_sql/grader/: pyproject.toml
examples/ADRS/llm_sql/grader/src/llm_sql_grader/: __init__.py  grader.py
examples/ADRS/txn_scheduling/grader/: pyproject.toml
examples/ADRS/txn_scheduling/grader/src/txn_scheduling_grader/: __init__.py  grader.py
examples/circle_packing/: task.yaml
examples/circle_packing/grader/: pyproject.toml
examples/circle_packing/grader/src/circle_packing_grader/: __init__.py
examples/dlomix-pfly/: task.yaml
examples/erdos/: task.yaml
examples/frontier_cs_research/poc_generation__heap_buffer_overflow_oss_fuzz_372515086/grader/: pyproject.toml
examples/kernel_builder/: task.yaml
examples/kernel_builder/grader/: pyproject.toml
examples/kernel_builder/grader/src/kernel_builder_grader/: __init__.py  grader.py
examples/kernel_engineering/trimul/grader/: pyproject.toml
examples/kernel_engineering/trimul/grader/src/trimul_grader/: __init__.py  grader.py
examples/math/circle_packing/grader/: pyproject.toml
examples/math/circle_packing/grader/src/circle_packing_grader/: __init__.py
examples/math/circle_packing_rect/grader/: pyproject.toml
examples/math/circle_packing_rect/grader/src/circle_packing_rect_grader/: __init__.py
examples/math/erdos_min_overlap/grader/: pyproject.toml
examples/math/erdos_min_overlap/grader/src/erdos_min_overlap_grader/: __init__.py
examples/math/first_autocorr_ineq/grader/: pyproject.toml
examples/math/first_autocorr_ineq/grader/src/first_autocorr_ineq_grader/: __init__.py
examples/math/heilbronn_convex_13/grader/: pyproject.toml
examples/math/heilbronn_convex_13/grader/src/heilbronn_convex_13_grader/: __init__.py
examples/math/heilbronn_convex_14/grader/: pyproject.toml
examples/math/heilbronn_convex_14/grader/src/heilbronn_convex_14_grader/: __init__.py
examples/math/heilbronn_triangle/grader/: pyproject.toml
examples/math/heilbronn_triangle/grader/src/heilbronn_triangle_grader/: __init__.py
examples/math/hexagon_packing_11/grader/: pyproject.toml
examples/math/hexagon_packing_11/grader/src/hexagon_packing_11_grader/: __init__.py
examples/math/hexagon_packing_12/grader/: pyproject.toml
examples/math/hexagon_packing_12/grader/src/hexagon_packing_12_grader/: __init__.py
examples/math/minimizing_max_min_dist_2d/grader/: pyproject.toml
examples/math/minimizing_max_min_dist_2d/grader/src/minimizing_max_min_dist_2d_grader/: __init__.py
examples/math/minimizing_max_min_dist_3d/grader/: pyproject.toml
examples/math/minimizing_max_min_dist_3d/grader/src/minimizing_max_min_dist_3d_grader/: __init__.py
examples/math/second_autocorr_ineq/grader/: pyproject.toml
examples/math/second_autocorr_ineq/grader/src/second_autocorr_ineq_grader/: __init__.py
examples/math/signal_processing/grader/: pyproject.toml
examples/math/signal_processing/grader/src/signal_processing_grader/: __init__.py
examples/math/sums_diffs_finite_sets/grader/: pyproject.toml
examples/math/sums_diffs_finite_sets/grader/src/sums_diffs_finite_sets_grader/: __init__.py
examples/math/uncertainty_ineq/grader/: pyproject.toml
examples/math/uncertainty_ineq/grader/src/uncertainty_ineq_grader/: __init__.py
examples/mnist/: task.yaml
examples/mnist/grader/: pyproject.toml
examples/mnist/grader/src/mnist_grader/: __init__.py  grader.py
examples/spaceship_titanic/: task.yaml
examples/stanford_covid_vaccine/: task.yaml
examples/stanford_covid_vaccine/grader/: pyproject.toml
examples/stanford_covid_vaccine/grader/src/stanford_covid_vaccine_grader/: __init__.py  grader.py
scripts/: migrate_legacy_graders.py
tests/: test_assignments.py  test_cli_log.py  test_cli_resume_instruction.py  test_cli_runtime_helpers.py  test_cli_start_prepare.py  test_cli_ui.py  test_compute_run.py  test_config.py  test_coral_research_workbench_skill.py  test_creator_stamping.py  test_custom_runtime.py  test_gateway_optional.py  test_grader.py  test_grader_daemon.py  test_grader_env.py  test_hooks.py  test_hub.py  test_integration.py  test_islands_runtime.py  test_kb.py  test_manager_reliability.py  test_manager_seen_attempts.py  test_subprocess_grader.py  test_template.py  test_types.py  test_validation.py  test_warmstart.py  test_web_jobs.py  test_web_multi_island.py  test_workspace.py
web/: package-lock.json  vite.config.ts
web/src/: App.tsx  index.css
(+434 files in other folders)
