[project]
name = "stanford-covid-vaccine-grader"
version = "0.1.0"
description = "CORAL grader for the stanford_covid_vaccine task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "numpy",
    "pandas",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stanford_covid_vaccine_grader"]
