[project]
name = "cloudcast-grader"
version = "0.1.0"
description = "CORAL grader for the ADRS/cloudcast task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "networkx",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudcast_grader"]
