[project]
name = "eplb-grader"
version = "0.1.0"
description = "CORAL grader for the ADRS/eplb task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eplb_grader"]
