[project]
name = "llm-sql-grader"
version = "0.1.0"
description = "CORAL grader for the ADRS/llm_sql task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "networkx",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_sql_grader"]
