[project]
name = "txn-scheduling-grader"
version = "0.1.0"
description = "CORAL grader for the ADRS/txn_scheduling task."
requires-python = ">=3.11"
dependencies = [
    "coral",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/txn_scheduling_grader"]
