[project]
name = "frontier-cs-research-grader"
version = "0.1.0"
description = "CORAL grader for Frontier-CS research problems (shared by all variants)."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontier_cs_research_grader"]
