[project]
name = "trimul-grader"
version = "0.1.0"
description = "CORAL grader for the kernel_engineering/trimul task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trimul_grader"]
