[project]
name = "circle-packing-grader"
version = "0.1.0"
description = "CORAL grader for the math/circle_packing task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/circle_packing_grader"]
