[project]
name = "erdos-min-overlap-grader"
version = "0.1.0"
description = "CORAL grader for the math/erdos_min_overlap task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erdos_min_overlap_grader"]
