[project]
name = "heilbronn-convex-13-grader"
version = "0.1.0"
description = "CORAL grader for the math/heilbronn_convex_13 task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heilbronn_convex_13_grader"]
