[project]
name = "heilbronn-convex-14-grader"
version = "0.1.0"
description = "CORAL grader for the math/heilbronn_convex_14 task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heilbronn_convex_14_grader"]
