[project]
name = "heilbronn-triangle-grader"
version = "0.1.0"
description = "CORAL grader for the math/heilbronn_triangle task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heilbronn_triangle_grader"]
