[project]
name = "hexagon-packing-12-grader"
version = "0.1.0"
description = "CORAL grader for the math/hexagon_packing_12 task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexagon_packing_12_grader"]
