[project]
name = "minimizing-max-min-dist-2d-grader"
version = "0.1.0"
description = "CORAL grader for the math/minimizing_max_min_dist_2d task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minimizing_max_min_dist_2d_grader"]
