[project]
name = "second-autocorr-ineq-grader"
version = "0.1.0"
description = "CORAL grader for the math/second_autocorr_ineq task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_autocorr_ineq_grader"]
