[project]
name = "signal-processing-grader"
version = "0.1.0"
description = "CORAL grader for the math/signal_processing task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_processing_grader"]
