[project]
name = "sums-diffs-finite-sets-grader"
version = "0.1.0"
description = "CORAL grader for the math/sums_diffs_finite_sets task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sums_diffs_finite_sets_grader"]
