[project]
name = "uncertainty-ineq-grader"
version = "0.1.0"
description = "CORAL grader for the math/uncertainty_ineq task."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uncertainty_ineq_grader"]
